# hypernote

./: .gitignore  .prettierignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  plan.md
docs/: SPEC.md  SPEC2.md  contracts.md  risk-log.md
scripts/: check-design-system.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: contracts.rs  main.rs
src/components/: CommandPalette.svelte  DesktopTocPanel.svelte  EditorPanel.svelte  MobileActionSheet.svelte  MobileTocSheet.svelte  NoteSidebar.svelte  StatusBar.svelte  TopBar.svelte  UtilityHub.svelte
src/lib/: tauri-client.test.ts  tauri-client.ts
src/lib/contracts/: contracts.test.ts  index.ts  protocol.ts  storage.ts  types.ts
src/lib/core/: index.ts  save-scheduler.test.ts  save-scheduler.ts
src/lib/design-system/: semantic.css  tokens.css
src/lib/editor/: markdown-toc.test.ts  markdown-toc.ts  textarea-yjs-bridge.test.ts  textarea-yjs-bridge.ts
src/lib/export/: workspace-export.test.ts  workspace-export.ts
src/lib/peers/: display-name.test.ts  display-name.ts
src/lib/persistence/: browser-note-store.ts  index.ts  local-note-persistence.test.ts  local-note-persistence.ts  metadata-index.ts  tauri-note-store.ts  trash-mover.ts  types.ts
src/lib/stores/: peer-status.test.ts  peer-status.ts
src/lib/sync/: frame.test.ts  frame.ts  join-fsm.test.ts  join-fsm.ts
src/lib/ui/: actions.test.ts  actions.ts
