[package]
name = "hypernote"
version = "0.1.0"
description = "HyperNote Tauri backend"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0" }
uuid = { version = "1", features = ["v4"] }
