[package]
name = "hypernote"
version = "0.1.0"
description = "HyperNote Tauri backend"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
futures-util = "0.3"
mdns-sd = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["sync", "net", "rt", "macros", "io-util"] }
tokio-tungstenite = "0.26"
uuid = { version = "1", features = ["v4"] }
